[package]
name = "deezel-cli"
version = "0.1.0"
edition = "2021"
description = "A Bitcoin wallet CLI tool for automated DIESEL token minting and management"
authors = ["Deezel Team"]
default-run = "deezel-cli"

[dependencies]
# Bitcoin Development Kit
bdk = { version = "0.30.2", features = ["all-keys"] }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }

# Esplora client
esplora-client = "0.6.0"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command-line argument parsing
clap = { version = "4.3", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
hex = "0.4"
async-trait = "0.1"
bitcoin = "0.32.5"

# Alkanes-rs crates

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
